docs: add swagger documentation for team's controller
