# cmd/app/docs/swagger.yaml
@@ -1,5 +1,41 @@
-basePath: /api/v1
-host: localhost:8080
+definitions:
+  dto.BriefTeamResponse:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  dto.TeamDetailsResponse:
+    properties:
+      capacity:
+        type: integer
+      description:
+        type: string
+      members:
+        items:
+          $ref: '#/definitions/dto.TeamMemberResponse'
+        type: array
+      name:
+        type: string
+    type: object
+  dto.TeamMemberResponse:
+    properties:
+      id:
+        type: integer
+      isLeader:
+        type: integer
+      name:
+        type: string
+    type: object
+  response.Response:
+    properties:
+      data: {}
+      message: {}
+      status:
+        type: string
+    type: object
+host: localhost:1323
 info:
   contact:
     email: support@swagger.io
@@ -10,26 +46,194 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
-  title: Swagger Example API
+  title: Compnouron API
   version: "1.0"
 paths:
-  /accounts/{id}:
+  /{id}:
     get:
-      consumes:
-      - application/json
-      description: get string by ID
+      description: Given the team ID, retrieve the detailed team's data that are associated
+        with that particular ID
       parameters:
-      - description: Account ID
+      - description: Team ID
         in: path
         name: id
         required: true
         type: integer
       produces:
       - application/json
-      responses: {}
-      summary: Show an account
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/dto.TeamDetailsResponse'
+                  type: array
+                message:
+                  type: string
+                status:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get detailed team's data by team ID
       tags:
-      - accounts
+      - Teams
+  /teams:
+    post:
+      consumes:
+      - application/json
+      description: Given the request body, the API will create a new team data
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  type: string
+                message:
+                  type: string
+                status:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Create new team
+      tags:
+      - Teams
+  /teams/{id}:
+    delete:
+      description: Given the ID path parameters, this endpoint will delete the existing
+        team's data
+      parameters:
+      - description: Team ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  type: string
+                message:
+                  type: string
+                status:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Delete team's data
+      tags:
+      - Teams
+    put:
+      consumes:
+      - application/json
+      description: Given the request body and the ID path parameters, this endpoint
+        will update the existing team's data
+      parameters:
+      - description: Team ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  type: string
+                message:
+                  type: string
+                status:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Update team's data
+      tags:
+      - Teams
+  /teams/users/{id}:
+    get:
+      description: Given the user ID as the path parameter, retrieve the team's data
+        that are associated with that particular user
+      parameters:
+      - description: Team ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/dto.BriefTeamResponse'
+                  type: array
+                message:
+                  type: string
+                status:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get team's data by user ID
+      tags:
+      - Teams
 securityDefinitions:
   BasicAuth:
     type: basic
