# internal/team/controller/team_controller.go
@@ -29,6 +29,17 @@ func (tc *TeamController) InitializeTeamRoute(config middleware.JWTConfig) {
 	}
 }
 
+// UpdateTeam godoc
+// @Summary      Update team's data
+// @Description  Given the request body and the ID path parameters, this endpoint will update the existing team's data
+// @Tags         Teams
+// @Accept       json
+// @Produce      json
+// @Param id path int true "Team ID"
+// @Success      200  {object}   response.Response{data=string,status=string,message=string}
+// @Failure      400  {object}  response.Response
+// @Failure      500  {object}  response.Response
+// @Router       /teams/{id} [put]
 func (tc *TeamController) UpdateTeam(c echo.Context) error {
 	teamID := c.Param("id")
 	teamIDUint, err := strconv.ParseUint(teamID, 10, 32)
@@ -68,6 +79,16 @@ func (tc *TeamController) UpdateTeam(c echo.Context) error {
 	})
 }
 
+// CreateTeam godoc
+// @Summary      Create new team
+// @Description  Given the request body, the API will create a new team data
+// @Tags         Teams
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}   response.Response{data=string,status=string,message=string}
+// @Failure      400  {object}  response.Response
+// @Failure      500  {object}  response.Response
+// @Router       /teams [post]
 func (tc *TeamController) CreateTeam(c echo.Context) error {
 	userID, _ := utils.GetUserDetails(c)
 	team := new(dto.TeamRequest)
@@ -97,6 +118,16 @@ func (tc *TeamController) CreateTeam(c echo.Context) error {
 	})
 }
 
+// DeleteTeam godoc
+// @Summary      Delete team's data
+// @Description  Given the ID path parameters, this endpoint will delete the existing team's data
+// @Tags         Teams
+// @Produce      json
+// @Param id path int true "Team ID"
+// @Success      200  {object}   response.Response{data=string,status=string,message=string}
+// @Failure      400  {object}  response.Response
+// @Failure      500  {object}  response.Response
+// @Router       /teams/{id} [delete]
 func (tc *TeamController) DeleteTeam(c echo.Context) error {
 	teamID := c.Param("id")
 	// userID, _ := utils.GetUserDetails(c)
@@ -128,6 +159,16 @@ func (tc *TeamController) DeleteTeam(c echo.Context) error {
 	})
 }
 
+// GetTeamsByUserID godoc
+// @Summary      Get team's data by user ID
+// @Description  Given the user ID as the path parameter, retrieve the team's data that are associated with that particular user
+// @Tags         Teams
+// @Produce      json
+// @Param id path int true "Team ID"
+// @Success      200  {object}   response.Response{data=[]dto.BriefTeamResponse,status=string,message=string}
+// @Failure      400  {object}  response.Response
+// @Failure      500  {object}  response.Response
+// @Router       /teams/users/{id} [get]
 func (tc *TeamController) GetTeamsByUserID(c echo.Context) error {
 	userID := c.Param("id")
 	userIDUint, err := strconv.ParseUint(userID, 10, 32)
@@ -155,6 +196,16 @@ func (tc *TeamController) GetTeamsByUserID(c echo.Context) error {
 	})
 }
 
+// GetTeamDetailsByID godoc
+// @Summary      Get detailed team's data by team ID
+// @Description  Given the team ID, retrieve the detailed team's data that are associated with that particular ID
+// @Tags         Teams
+// @Produce      json
+// @Param id path int true "Team ID"
+// @Success      200  {object}   response.Response{data=[]dto.TeamDetailsResponse,status=string,message=string}
+// @Failure      400  {object}  response.Response
+// @Failure      500  {object}  response.Response
+// @Router       /{id} [get]
 func (tc *TeamController) GetTeamDetailsByID(c echo.Context) error {
 	teamID := c.Param("id")
 	teamIDUint, err := strconv.ParseUint(teamID, 10, 32)
